--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
-opencv-python
-mtcnn
+torch
+torchvision
 numpy
-tensorflow
+opencv-python
+dlib
+Pillow
+onnx 
+onnxruntime 
+onnxruntime-gpu 
+tensorrt
+nvidia-pyindex
+nvidia-cuda-runtime-cu12
+nvidia-cudnn-cu12
+cuda-python
+scikit-learn
+matplotlib
+seaborn
